Overflow laga scrollbar pga str på eventbilder :( fixa

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ p{
 
 /*------------------kent, minKamp, inferno, boSommarland-----------------------*/
 #kent, #minKamp, #scene, #inferno, #boSommarland, #kart{
-    width: 320px;
+    width: 306px;
 }
 
 #txtBox{
